[project]
name = "unit-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owaisyosuf", email = "owais.251990@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44.1",
]

[project.scripts]
kickoff = "unit_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
